# llama.rn

./: .gitmodules
android/: build.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt  jni.cpp
android/src/main/kompute/src/: CMakeLists.txt
android/src/main/kompute/src/include/kompute/operations/: OpTensorSyncDevice.hpp
cpp/: build-info.h  common.cpp  ggml-backend.c  ggml-backend.h  ggml-metal.m  ggml-opencl.cpp  ggml-opencl.h  ggml-vulkan.cpp  ggml-vulkan.h  ggml.c  ggml.h  k_quants.c  llama.cpp  llama.h  log.h
cpp/CLBlast/tuning/kernels/: copy_fast.hpp  copy_pad.hpp  invert.hpp  transpose_fast.hpp  transpose_pad.hpp  xaxpy.hpp  xconvgemm.hpp  xdot.hpp  xgemm.hpp  xgemm_direct.hpp  xgemv.hpp  xger.hpp
cpp/Vulkan-Headers/include/vulkan/: vulkan_core.h
example/android/: build.gradle
example/src/: App.tsx
scripts/: bootstrap.sh  llama.cpp.patch  log.h.patch
